Created other version for demo with longer way

--- a/khoi/css/styles.css
+++ b/khoi/css/styles.css
@@ -1,13 +1,8 @@
 /* Common definitions */
-body{
-    background-image: url("../images/background_snow-man_1920.jpg");
-    background-size: 100%;
-}
+body{background-color: #000000;}
 
 /* Definition for cursor */
-.cursor-gingerbread{
-    cursor: url("../images/gingerbread-man-icon.png"),default;
-}
+.cursor-gingerbread{cursor: url("../images/gingerbread-man-icon.png"),default;}
 
 /* Definition for text */
 .text-main-title{
@@ -18,15 +13,12 @@ body{
 
 /* Definition for background of the game*/
 .svgPath{width: 0px;height: 0px;}
-.left-side{
-    -webkit-clip-path: url("#left-svgPath");
-    clip-path: url("#left-svgPath");
+.game-background{
+    width: 800px;
+    height: 1000px;
+    -webkit-clip-path: url("#svgPath-sides");
+    clip-path: url("#svgPath-sides");
 }
-.right-side{
-    -webkit-clip-path: url("#right-svgPath");
-    clip-path: url("#right-svgPath");
-}
-
 
 /* Definition for snows */
 .snow{
@@ -37,6 +29,9 @@ body{
     position: relative;
     z-index: 1;
 }
+.snow:hover{
+    fill: red;
+}
 
 .snow-move-1{
     animation: kf-snow-move-1 20s steps(500) infinite;
@@ -44,9 +39,8 @@ body{
     /* Safari 4.0 - 8.0 */
     -webkit-animation: kf-snow-move-1 20s steps(500) infinite;
 }
-@keyframes kf-snow-move-1{0%{top: 0px;}100%{top: 600px;}}
-@-webkit-keyframes kf-snow-move-1{0%{top: 0px;}100%{top: 600px;}}
-
+@keyframes kf-snow-move-1{0%{top: 0px;}100%{top: 1000px;}}
+@-webkit-keyframes kf-snow-move-1{0%{top: 0px;}100%{top: 1000px;}}
 
 .snow-move-2{
     animation: kf-snow-move-2 20s steps(500) infinite;
@@ -54,8 +48,8 @@ body{
     /* Safari 4.0 - 8.0 */
     -webkit-animation: kf-snow-move-2 20s steps(500) infinite;
 }
-@keyframes kf-snow-move-2{0%{top: -50px;}100%{top: 600px;}}
-@-webkit-keyframes kf-snow-move-2{0%{top: -50px;}100%{top: 600px;}}
+@keyframes kf-snow-move-2{0%{top: -50px;}100%{top: 1000px;}}
+@-webkit-keyframes kf-snow-move-2{0%{top: -50px;}100%{top: 1000px;}}
 
 .snow-move-3{
     animation: kf-snow-move-3 20s steps(500) infinite;
@@ -63,5 +57,5 @@ body{
     /* Safari 4.0 - 8.0 */
     -webkit-animation: kf-snow-move-3 20s steps(500) infinite;
 }
-@keyframes kf-snow-move-3{0%{top: 50px;}100%{top: 600px;}}
-@-webkit-keyframes kf-snow-move-3{0%{top: 50px;}100%{top: 600px;}}
+@keyframes kf-snow-move-3{0%{top: 50px;}100%{top: 1000px;}}
+@-webkit-keyframes kf-snow-move-3{0%{top: 50px;}100%{top: 1000px;}}
