--- a/khoi/Daniel/css/actions.css
+++ b/khoi/Daniel/css/actions.css
@@ -1,11 +1,6 @@
-#lose-message{
+.lose-box{
     display: none;
-
     text-align: center;
-    color: #ff0000;
-    font-weight: bolder;
-    font-size: 100px;
-    line-height: 500px;
 
     /* Create overlay div */
     position: fixed;
@@ -20,11 +15,17 @@
     opacity: 0.5;
     z-index: 10000;
 }
+.lose-message{
+    margin-top: 100px;
+    text-align: center;
+    color: #ff0000;
+    font-weight: bolder;
+    font-size: 100px;
+}
 
 #playgame{width: 100%;text-align: center;}
 
 .button {
-    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 16px 32px;
@@ -40,12 +41,21 @@
 }
 
 
-.btn-playgame{
+.button-playgame{
     background-color: white;
     color: black;
     border: 2px solid #008CBA;
 }
-.btn-playgame:hover{
+.button-playgame:hover{
     background-color: #008CBA;
     color: white;
+}
+
+.button-playagain{
+    background-color: #f44336;
+    color: black;
+    border: 2px solid #f44336;
+}
+.button-playagain:hover{
+    background-color: #ffffff;
 }
