--- a/khoi/Daniel/css/actions.css
+++ b/khoi/Daniel/css/actions.css
@@ -1,4 +1,4 @@
-.lose-box{
+.message-box{
     display: none;
     text-align: center;
 
@@ -12,7 +12,7 @@
     filter:alpha(opacity=50);
     -moz-opacity:0.5;
     -khtml-opacity: 0.5;
-    opacity: 0.5;
+    opacity: 0.8;
     z-index: 10000;
 }
 .lose-message{
@@ -22,6 +22,14 @@
     font-weight: bolder;
     font-size: 100px;
 }
+.win-message{
+    margin-top: 100px;
+    text-align: center;
+    color: #1e7e34;
+    font-weight: bolder;
+    font-size: 100px;
+}
+
 
 #playgame{width: 100%;text-align: center;}
 
@@ -57,5 +65,14 @@
     border: 2px solid #f44336;
 }
 .button-playagain:hover{
+    background-color: #ffffff;
+}
+
+.button-playmore{
+    background-color: #1e7e34;
+    color: black;
+    border: 2px solid #1e7e34;
+}
+.button-playmore:hover{
     background-color: #ffffff;
 }
