--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 body {
     margin: 0 auto;
     padding: 0;
@@ -14,7 +9,7 @@ body {
 }
 
 /* Snowing Effects */
-#SnowingEffect {
+#snowingEffect {
     background-image: url('images/snow/snow1.png'), url('images/snow/snow2.png'), url('images/snow/snow3.png');
     -webkit-animation: snow 5s linear infinite;
     -moz-animation: snow 5s linear infinite;
@@ -51,31 +46,118 @@ h1 {
     padding: 25px 0;
 }
 
-/* Left/Right Snow Path Styles */
-.pathSnow {
+/* The Game Container */
+#gameContainer {
+    position: relative;
+    background-color: #8c8c8c;
+    margin: 0 auto;
+    width: 800px;
+    height: 500px;
+    overflow: hidden;
+    //cursor: url('images/cursor.png'),auto; /* Need to fix cursor, to big and touches everything on map */
+}
+
+/* Map Snow Styles */
+.leftSide, .rightSide {
     fill:#EFEFEF;
     stroke:#000000;
     stroke-width:3;
     stroke-miterlimit:10;
 }
 
-/* Main Game Container */
-#game-container {
-    width: 800px;
-    height: 100%;
-    overflow: hidden;
-    margin: 0 auto;
-    padding: 0;
-    background-color: #8b8b8b;
-    border: 2px solid grey;
-    cursor: url('images/cursor.png'),auto;
+/* Animate Map on Click */
+.gamePath {} /* jQuery fills this on click, Don't Delete! */
+
+.path-animation {
+    position: relative;
+    -webkit-animation: pathAnimation 20s linear forwards;
+    -moz-animation: pathAnimation 20s linear forwards;
+    -ms-animation: pathAnimation 20s linear forwards;
+    animation: pathAnimation 20s linear forwards;
 }
 
-/* Hoover effect on Left/Right Path and Obstacles */
-/* For Testing purposes only */
-#Left > path:hover,
-#Right > path:hover,
-#Obstacles:hover,
-#Trees_and_Raindeers:hover{
-    opacity: 0.3;
+@keyframes pathAnimation {
+    0%   {top: -3500px;}
+    100% {top: 1px;}
+}
+
+/* Move Map to Start Location on Page Load */
+.startPoint {
+    position: relative;
+    -webkit-animation: startPointMover forwards;
+    -moz-animation: startPointMover forwards;
+    -ms-animation: startPointMover forwards;
+    animation: startPointMover forwards;
+}
+
+@keyframes startPointMover {
+    100%   {top: -3500px;}
+}
+
+
+
+
+
+
+.message-box{
+    display: none;
+    text-align: center;
+
+    /* Create overlay div */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    z-index: 10000;
+}
+
+.messageText {
+    margin: 160px 0 50px 0;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 100px;
+}
+
+.lose { color: #ff0000;}
+.win { color: #1e7e34;}
+.counter {color: #008CBA;}
+
+.button {
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-weight: bold;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    border: 2px solid #333333;
+}
+
+.loseButton {
+    background-color: #f44336;
+    color: #000000;
+}
+
+.winButton{
+    background-color: #1e7e34;
+    color: #000000;
+}
+
+.loseButton:hover, .winButton:hover{
+    background-color: #ccc;
+}
+
+
+.counter-message{
+    margin-top: 100px;
+    text-align: center;
+    color: #1e7e34;
+    font-weight: bolder;
+    font-size: 100px;
 }
