--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
 /* Page Header */
 h1 {
     text-align: center;
-    padding: 25px 0;
+    padding: 0;
 }
 
 /* The Game Container */
@@ -51,9 +51,11 @@ h1 {
     background-color: #8c8c8c;
     margin: 0 auto;
     width: 800px;
-    height: 600px;
+    height: 500px;
     overflow: hidden;
     cursor: url('../images/cursor.png'),auto;
+    border: 15px double #292421	;
+    border-radius: 15px;
 }
 
 .viewAs3D{
@@ -82,7 +84,7 @@ h1 {
 }
 @keyframes pathAnimation {
     0%   {top: -3500px;}
-    100% {top: 1px;}
+    100% {top: 180px;}
 }
 
 /* Move Map to Start Location on Page Load */
@@ -107,9 +109,26 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.95);
     z-index: 10000;
 }
+
+
+.counter-box{
+    display: none;
+    text-align: center;
+
+    /* Create overlay div */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.4);
+    z-index: 10000;
+}
+
+
 .messageText {
     margin: 160px 0 50px 0;
     text-align: center;
