--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,8 @@ h1 {
     border-radius: 15px;
 }
 
-.viewAs3D{
+/* Activate for 3d Effect */
+.viewAs3D {
     -webkit-transform: perspective(300px) rotateX(15deg) translateY(-90px);
     transform: perspective(300px) rotateX(15deg) translateY(-90px);
     /*The perspective CSS property gives an element a 3D-space by affecting the distance between the Z plane and the user. (css-tricks.com)*/
