--- a/css/style.css
+++ b/css/style.css
@@ -192,20 +192,26 @@ h1 {
     position: absolute;
     z-index: 10000;
     top: 400px;
-    left: 47%;
+    left: 40%;
+}
+#winScoreBox>p:first-of-type {
+    margin-right: 8px;
+}
+#winScoreBox>p {
+    font-size: 30px;
+    color: lawngreen;
 }
 #looseScoreBox {
     display: flex;
     position: absolute;
     z-index: 10000;
     top: 400px;
-    left: 47%;
+    left: 45%;
+}
+#looseScoreBox>p:first-of-type {
+    margin-right: 8px;
 }
 #looseScoreBox>p {
     font-size: 30px;
-    color: #00ddff;
-}
-#winScoreBox>p {
-    font-size: 30px;
-    color: lawngreen;
+    color: red;
 }
